// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly for multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    5
     
    expenses
     totalling 
    $10.50
  </h3>
</div>
`;

exports[`should render ExpenseSummary page correctly for single expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.50
  </h3>
</div>
`;
